--- a/WebApplication/Views/Shared/_LoginPartial.cshtml
+++ b/WebApplication/Views/Shared/_LoginPartial.cshtml
@@ -1,13 +1,11 @@
 ﻿@using WebApplication.Services
 
-@inject RestService _restService
-
-@if (_restService.GetToken() != null)
+@if (RestService.Token != null)
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @_restService.GetUsername()!</a>
+                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @RestService.Username!</a>
             </li>
             <li>
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
