--- a/WebApplication/Views/Tickets/Details.cshtml
+++ b/WebApplication/Views/Tickets/Details.cshtml
@@ -1,14 +1,13 @@
 ﻿@model WebApplication.Models.Ticket
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Ticket Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Ticket Details</h2>
 
 <div>
-    <h4>Ticket</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -56,6 +55,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
