--- a/WebApplication/Views/Tickets/Index.cshtml
+++ b/WebApplication/Views/Tickets/Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@model IEnumerable<WebApplication.Models.Ticket>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "My Tickets";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>My Tickets</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New Ticket</a>
 </p>
 <table class="table">
     <thead>
