--- a/WebApplication/Views/Tickets/Create.cshtml
+++ b/WebApplication/Views/Tickets/Create.cshtml
@@ -1,13 +1,11 @@
 ﻿@model WebApplication.Models.Ticket
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Ticket";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
-
-<h4>Ticket</h4>
+<h2>Create Ticket</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
